[gd_scene load_steps=25 format=2]

[ext_resource path="res://juego/niveles/NivelBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://juego/plataformas/PlataformaLargaPiedra.tscn" type="PackedScene" id=2]
[ext_resource path="res://juego/objetos/Portal.tscn" type="PackedScene" id=3]
[ext_resource path="res://juego/personaje/Saltarina.tscn" type="PackedScene" id=4]
[ext_resource path="res://juego/objetos/ZanahoriaLlave.tscn" type="PackedScene" id=5]
[ext_resource path="res://juego/Pinchos.tscn" type="PackedScene" id=6]
[ext_resource path="res://juego/objetos/MonedaOro.tscn" type="PackedScene" id=7]
[ext_resource path="res://juego/plataformas/PlataformaCortaMadera.tscn" type="PackedScene" id=8]
[ext_resource path="res://juego/enemigos/EvilSaltarina.tscn" type="PackedScene" id=9]
[ext_resource path="res://juego/objetos/MonedaBronce.tscn" type="PackedScene" id=10]
[ext_resource path="res://juego/objetos/MonedaPlata.tscn" type="PackedScene" id=11]
[ext_resource path="res://juego/niveles/Camera2D.gd" type="Script" id=12]
[ext_resource path="res://juego/objetos/PlataformaTrampa.tscn" type="PackedScene" id=13]
[ext_resource path="res://Recursos/Particles/smoke.png" type="Texture" id=14]
[ext_resource path="res://juego/objetos/Powerup/PowerUpVolar.tscn" type="PackedScene" id=15]
[ext_resource path="res://juego/objetos/PlataformaImpulora.tscn" type="PackedScene" id=16]
[ext_resource path="res://Recursos/sfx/shake.wav" type="AudioStream" id=17]
[ext_resource path="res://juego/niveles/Nivel_10.gd" type="Script" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 304.122 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.3248, 1117.58 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.502128, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 0, 600, 0 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
scale_random = 1.0
color_ramp = SubResource( 4 )

[sub_resource type="Animation" id=6]
length = 41.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 11, 16.0054, 16.1054, 16.2054, 16.3, 16.4, 16.5, 16.6, 16.7, 16.8, 16.9, 17, 17.1, 17.2, 17.3, 17.3946, 17.4946, 17.5946, 17.6946, 17.7946, 17.8946, 17.9946, 18.0946, 18.1, 18.2, 18.3, 18.3946, 18.4946, 18.5946, 18.6946, 18.7946, 18.8946, 18.9946, 19.0946, 19.1, 19.2, 19.3, 19.3946, 19.4946, 19.5946, 19.6946, 19.7946, 19.8946, 19.9946, 20.0946, 20.1, 20.2, 20.3, 20.3946, 20.4946, 20.5946, 20.6946, 20.7946, 20.8946, 20.9946, 21.0946, 21.1, 21.2, 21.3, 21.3946, 21.4946, 21.5946, 21.6946, 21.7946, 21.8946, 21.9946, 22, 22.0946, 22.1, 22.2, 22.2946, 22.3946, 22.4946, 22.5946, 22.6946, 22.7946, 22.8946, 22.9946, 23, 23.1, 23.2, 23.2946, 23.3946, 23.4946, 23.5946, 23.6946, 23.7946, 23.8946, 23.9946, 24, 24.1, 24.2, 24.2946, 24.3946, 24.4946, 24.5946, 24.6946, 24.7946, 24.8946, 24.9946, 25, 25.1, 25.2, 25.2946, 25.3946, 25.4946, 25.5946, 25.6946, 25.7946, 25.8946, 25.9946, 26, 26.1, 26.2, 26.2946, 26.3946, 26.4946, 26.5946, 26.6946, 26.7946, 26.8946, 26.9946, 27, 27.1, 27.2, 27.2946, 27.3946, 27.4946, 27.5946, 27.6946, 27.7946, 27.8946, 27.9946, 28, 28.1, 28.2, 28.2946, 28.3946, 28.4946, 28.5946, 28.6946, 28.7946, 28.8946, 28.9946, 29, 29.1, 29.2, 29.2946, 29.3946, 29.4946, 29.5946, 29.6946, 29.7946, 29.8946, 29.9946, 30, 30.1, 30.2, 30.2946, 30.3946, 30.4946, 30.5946, 30.6946, 30.7946, 30.8946, 30.9946, 31, 31.1, 31.2, 31.2946, 31.3946, 31.4946, 31.5946, 31.6946, 31.7946, 31.8946, 31.9946, 32, 32.1, 32.2, 32.2946, 32.3946, 32.4946, 32.5946, 32.6946, 32.7946, 32.8946, 32.9946, 33, 33.1, 33.2, 33.2946, 33.3946, 33.4946, 33.5946, 33.6946, 33.7946, 33.8946, 33.9946, 34, 34.1, 34.2, 34.2946, 34.3946, 34.4946, 34.5946, 34.6946, 34.7946, 34.8946, 34.9946, 35, 35.1, 35.2, 35.2946, 35.3946, 35.4946, 35.5946, 35.6946, 35.7946, 35.8946, 35.9946, 36, 36.1, 36.2, 36.2946, 36.3946, 36.4946, 36.5946, 36.6946, 36.7946, 36.8946, 36.9946, 37, 37.1, 37.2, 37.2946, 37.3946, 37.4946, 37.5946, 37.6946, 37.7946, 37.8946, 37.9946, 38, 38.1, 38.2, 38.2946, 38.3946, 38.4946, 38.5946, 38.6946, 38.7946, 38.8946, 38.9946, 39, 39.1, 39.2, 39.2946, 39.3946, 39.4946, 39.5946, 39.6946, 39.7946, 39.8946, 39.9946, 40, 40.1, 40.2, 40.2946, 40.3946, 40.4946, 40.5946, 40.6946, 40.7946, 40.8946, 40.9946 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 447.786, 468.008 ), Vector2( 3603.38, 470.002 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ), Vector2( 4570.94, 528.37 ), Vector2( 4575.94, 528.37 ), Vector2( 4560.94, 518.37 ), Vector2( 4572.94, 520.37 ), Vector2( 4577.94, 514.37 ), Vector2( 4575.94, 510.37 ), Vector2( 4566.94, 544.37 ), Vector2( 4575.94, 515.37 ), Vector2( 4562.94, 533.37 ), Vector2( 4552.94, 513.37 ), Vector2( 4572.94, 543.37 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 16.2, 41 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.8, 1.8 ) ]
}

[node name="Nivel10" instance=ExtResource( 1 )]
script = ExtResource( 18 )

[node name="TextureRect" parent="ParallaxBackground/ParallaxFondo" index="0"]
self_modulate = Color( 0.101961, 0.101961, 0.101961, 1 )

[node name="TextureRect" parent="ParallaxBackground/ParallaxNubesLejanas" index="0"]
self_modulate = Color( 0.380392, 0.380392, 0.380392, 1 )

[node name="TextureRect" parent="ParallaxBackground/ParallaxNubesMedias" index="0"]
self_modulate = Color( 0, 0, 0, 1 )

[node name="TextureRect" parent="ParallaxBackground/ParallaxNubesCercanas" index="0"]
self_modulate = Color( 0.694118, 0.678431, 0.678431, 1 )

[node name="PlataformaLargaPiedra" parent="PlataformasLargas" index="0" instance=ExtResource( 2 )]
position = Vector2( 519.085, 701.855 )

[node name="PlataformaLargaPiedra2" parent="PlataformasLargas" index="1" instance=ExtResource( 2 )]
position = Vector2( 1484.59, 760.648 )

[node name="PlataformaLargaPiedra3" parent="PlataformasLargas" index="2" instance=ExtResource( 2 )]
position = Vector2( 2449.58, 765.529 )

[node name="PlataformaLargaPiedra4" parent="PlataformasLargas" index="3" instance=ExtResource( 2 )]
position = Vector2( 3395.48, 770.165 )

[node name="PlataformaLargaPiedra5" parent="PlataformasLargas" index="4" instance=ExtResource( 2 )]
position = Vector2( 5607.64, 748.976 )

[node name="PlataformaCortaMadera" parent="PlataformaCorta" index="0" instance=ExtResource( 8 )]
position = Vector2( 911.439, 437.76 )

[node name="EvilSaltarina" parent="Enemigos" index="0" instance=ExtResource( 9 )]
position = Vector2( 4528.13, 1079.76 )

[node name="Rayos" type="Node" parent="Enemigos/EvilSaltarina" index="6"]

[node name="MonedaOro" parent="Monedas" index="0" instance=ExtResource( 7 )]
position = Vector2( 374.902, 624.089 )

[node name="MonedaOro2" parent="Monedas" index="1" instance=ExtResource( 7 )]
position = Vector2( 572.456, 621.844 )

[node name="MonedaOro3" parent="Monedas" index="2" instance=ExtResource( 7 )]
position = Vector2( 505.108, 624.089 )

[node name="MonedaOro4" parent="Monedas" index="3" instance=ExtResource( 7 )]
position = Vector2( 440.005, 624.089 )

[node name="MonedaOro5" parent="Monedas" index="4" instance=ExtResource( 7 )]
position = Vector2( 469.971, 541.682 )

[node name="MonedaBronce" parent="Monedas" index="5" instance=ExtResource( 10 )]
position = Vector2( 2258.65, 691.217 )

[node name="MonedaBronce2" parent="Monedas" index="6" instance=ExtResource( 10 )]
position = Vector2( 2990.2, 687.01 )

[node name="MonedaBronce3" parent="Monedas" index="7" instance=ExtResource( 10 )]
position = Vector2( 2766.55, 686.172 )

[node name="MonedaBronce4" parent="Monedas" index="8" instance=ExtResource( 10 )]
position = Vector2( 2512.6, 691.217 )

[node name="MonedaPlata" parent="Monedas" index="9" instance=ExtResource( 11 )]
position = Vector2( 3167.44, 682.877 )

[node name="MonedaPlata2" parent="Monedas" index="10" instance=ExtResource( 11 )]
position = Vector2( 3230.44, 622.401 )

[node name="MonedaPlata3" parent="Monedas" index="11" instance=ExtResource( 11 )]
position = Vector2( 3227.92, 682.877 )

[node name="MonedaPlata4" parent="Monedas" index="12" instance=ExtResource( 11 )]
position = Vector2( 3167.44, 622.401 )

[node name="ZanahoriaLlave" parent="Zanahorias" index="0" instance=ExtResource( 5 )]
position = Vector2( 5251.58, -338.013 )

[node name="PlataformaTrampa" parent="PlataformaTrap" index="0" instance=ExtResource( 13 )]
position = Vector2( 4113.67, 104.271 )

[node name="Saltarina" parent="." index="10" instance=ExtResource( 4 )]
position = Vector2( 263.749, 584.264 )

[node name="Portal" parent="." index="11" instance=ExtResource( 3 )]
position = Vector2( 5284.67, 650.961 )
proximo_nivel = "res://juego/Menus/MenuVictoria.tscn"

[node name="Trigger" type="Node" parent="." index="12"]

[node name="Area2D" type="Area2D" parent="Trigger" index="0"]
collision_layer = 0
collision_mask = 2

[node name="DetectarJugador" type="CollisionShape2D" parent="Trigger/Area2D" index="0"]
position = Vector2( 1861.41, 437.348 )
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="Trigger" index="1"]
collision_layer = 0
collision_mask = 2

[node name="DetectarJugador" type="CollisionShape2D" parent="Trigger/Area2D2" index="0"]
position = Vector2( 3670.35, 440.623 )
shape = SubResource( 1 )

[node name="ParedIzq" type="StaticBody2D" parent="Trigger" index="2"]
position = Vector2( -523.257, 66.7419 )
collision_layer = 0
collision_mask = 2

[node name="ParedeNiebla" type="CollisionShape2D" parent="Trigger/ParedIzq" index="0"]
position = Vector2( 3297.82, -324.532 )
shape = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="Trigger/ParedIzq" index="1"]
position = Vector2( 3297.51, 266.814 )
emitting = false
amount = 100
lifetime = 10.0
randomness = 1.0
process_material = SubResource( 5 )
texture = ExtResource( 14 )

[node name="PosicionRespawn" type="Position2D" parent="Trigger" index="3"]
position = Vector2( 2840.21, -93.6089 )

[node name="PosicionSalida" type="Position2D" parent="Trigger" index="4"]
position = Vector2( 5249.12, -419.383 )

[node name="Cutscene" type="Node" parent="." index="13"]

[node name="Camera2D" type="Camera2D" parent="Cutscene" index="0"]
position = Vector2( 4572.94, 543.37 )
zoom = Vector2( 1.8, 1.8 )
script = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cutscene" index="1"]
anims/boss_spawn = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Cutscene" index="2"]
stream = ExtResource( 17 )
bus = "Musica"

[node name="Pinchos" parent="Pinchos2" index="0" instance=ExtResource( 6 )]
position = Vector2( 843.019, 474.733 )
es_trampa = true

[node name="Pinchos2" parent="Pinchos2" index="1" instance=ExtResource( 6 )]
position = Vector2( 1210.07, 718.84 )

[node name="PowerUps" type="Node" parent="." index="15"]

[node name="PowerUpVolar" parent="PowerUps" index="0" instance=ExtResource( 15 )]
position = Vector2( 3781.83, 576.847 )
respawn = true

[node name="PlataformaImpulora" parent="." index="16" instance=ExtResource( 16 )]
position = Vector2( 3782.35, 750.08 )

[connection signal="body_entered" from="Trigger/Area2D" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Trigger/Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="animation_finished" from="Cutscene/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
